--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 /CSharp-2.7-FirstProgram/obj/Debug/net8.0
 /CSharp-2.7-FirstProgram/obj
 CSharp-2.7-FirstProgram/CSharp-2.7-FirstProgram.csproj
+C-Sharp-Course-Microsoft-Learn.sln
+/Csharp-1.7-FirstProgram/obj
+*.csproj
+/Csharp-2.5-MethodCall/obj
