Chore: Upload class 03-01-25

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@
 /3.2.2-CodeblocksVariableScope/obj
 /3.2.3-RemoveCodeblocksIf/obj
 /3.2.5-ChallengeVariableScope/obj
+/3.3.2-SwitchCase/obj
+/3.3.4-ChallengeSwitchCase/obj
