Chore: Upload class 07-01-25

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@
 /3.3.4-ChallengeSwitchCase/obj
 /3.4.2-ForLoop/obj
 /3.4.6-ExerciseForLoop/obj
+/3.5.2-ExerciseDoWhile/obj
+/3.5.4-ChallengeRPGDoWhile/obj
+/3.5.6.1-ExercisesSolutionsDoWhile1/obj
