Chore: Upload class 08-01-25

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@
 /3.5.2-ExerciseDoWhile/obj
 /3.5.4-ChallengeRPGDoWhile/obj
 /3.5.6.1-ExercisesSolutionsDoWhile1/obj
+/3.5.6.2-ExercisesSolutionsDoWhile2/obj
+/3.5.6.3-ExercisesSolutionsDoWhile3/obj
