--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@
 /3.5.6.1-ExercisesSolutionsDoWhile1/obj
 /3.5.6.2-ExercisesSolutionsDoWhile2/obj
 /3.5.6.3-ExercisesSolutionsDoWhile3/obj
+/3.6-RamifiedConditionalStructuresLoop/obj
