--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@
 /3.5.6.2-ExercisesSolutionsDoWhile2/obj
 /3.5.6.3-ExercisesSolutionsDoWhile3/obj
 /3.6-RamifiedConditionalStructuresLoop/obj
+/4.1.3-Integer/obj
+/4.1.4-Float/obj
+/4.1.5-ReferenceTypes/obj
