Chore: Upload class 17-01-25

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@
 /4.1.3-Integer/obj
 /4.1.4-Float/obj
 /4.1.5-ReferenceTypes/obj
+/4.2.2-DataTypeConversion/obj
+/4.2.3-TryParse/obj
+/4.2.5-ChallengeConvertDataType/obj
