--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,6 @@
 /4.2.3-TryParse/obj
 /4.2.5-ChallengeConvertDataType/obj
 /4.2.6-ChallengeConvertDataType2/obj
-/4.3.2-SortRezise/obj
+/4.3.2-SortResize/obj
+/4.3.3-ClearResize/obj
+/4.3.4-SplitJoin/obj
