--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@
 /4.3.4-SplitJoin/obj
 /4.3.6-ChallengeTextReversedWords/obj
 /4.3.8-ChallengeAnalyzeCharChain/obj
+/4.4.2-BasicNotionsFormatCharChain/obj
