Chore: Upload class 27-01-25, 28-01-25

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,6 @@
 /4.3.6-ChallengeTextReversedWords/obj
 /4.3.8-ChallengeAnalyzeCharChain/obj
 /4.4.2-BasicNotionsFormatCharChain/obj
+/4.4.3-InterpolationCharChain/obj
+/4.4.4-DiscoverFillAlignment/obj
+/4.4.6-ChallengeInterpolationCharChain/obj
