Chore: Upload class 30-01-25

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@
 /4.4.3-InterpolationCharChain/obj
 /4.4.4-DiscoverFillAlignment/obj
 /4.4.6-ChallengeInterpolationCharChain/obj
+/4.5.2-IndexOfSubstring/obj
