Chore: Upload class 31-01-25

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@
 /4.4.4-DiscoverFillAlignment/obj
 /4.4.6-ChallengeInterpolationCharChain/obj
 /4.5.2-IndexOfSubstring/obj
+/4.5.3-IndexOfSubstring2/obj
+/4.5.4-RemoveReplace/obj
